<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Experiments-Kotlin</string>
    <string name="test_query">Test Query</string>
    <string name="loaded_image">Loaded Image</string>
    <string name="load_image">Load Image</string>
    <string name="close">close</string>
    <string name="press_back_again_to_exit">press_back_again_to_exit</string>
    <string name="location_permission_text">location_permission_text</string>
    <string name="settings">settings</string>
    <string name="to_continue_enable_geolocation">to_continue_enable_geolocation</string>
    <string name="meters_dot">meters_dot</string>
    <string name="kilometers_dot">kilometers_dot</string>
    <string name="cancel">cancel</string>
    <string name="blank_string"> </string>
    <string name="null_string">NULL</string>
    <string name="articles">Articles</string>
    <string name="core_network_test">Core Network test</string>
    <string name="wikia_articles">Wikia articles</string>
    <string name="paging_library">Paging Library</string>
    <string name="paging_library_sectioned">Paging Library Sectioned</string>
</resources>
