<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/coreNetworkTestFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/core_network_test" />

        <Button
            android:id="@+id/articlesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wikia_articles" />

        <Button
            android:id="@+id/pagingLibraryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paging_library" />

        <Button
            android:id="@+id/pagingLibrarySectionedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paging_library_sectioned" />
    </LinearLayout>

</FrameLayout>